discussion/kv_engine/162392/162392_rev11_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-45066: Remove support for "default bucket"

All connections needs to authenticate to the server and
select a bucket (unless a bucket exists with the same
name as the authenticated user)

Change-Id: I9b441208139e4bfbcdfee80fdd6c672f6f08e4c3

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-09-29 15:03:58.000000000
Message: 
Uploaded patch set 11.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-09-29 15:30:59.000000000
Message: 
Patch Set 11: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40552/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [0000/0158]: expiry pager settings.....\kv_engine\engines\ep\tests\ep_testsuite.cc:712 Test failed: `" (Expected `2021-09-29 15:51:17" to be less than or equal to `2021-09-29 15:51:16" - Unexpected task time range, expect: 2021-09-29 15:51:17 <= 2021-09-29 15:51:16 <= 2021-09-29 15:51:17)
(1080 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40552/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12959/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/protocol/mcbp/mcbp_fuzz_test.cc:10:10: error: "memcached_audit_events.h" file not found [clang-diagnostic-error]
#include "memcached_audit_events.h"
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12959/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/protocol/mcbp/mcbp_fuzz_test.cc:10:10:
error: "memcached_audit_events.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12959/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34504/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/11748/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2588/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13713/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14567/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2622/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/22845/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/14834/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15392/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-09-29 15:52:40.000000000
Message: 
Patch Set 11:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12959/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/protocol/mcbp/mcbp_fuzz_test.cc:10:10: error: "memcached_audit_events.h" file not found [clang-diagnostic-error]
#include "memcached_audit_events.h"
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12959/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/protocol/mcbp/mcbp_fuzz_test.cc:10:10:
error: "memcached_audit_events.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12959/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34504/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/11748/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2588/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13713/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14567/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2622/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/22845/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/14834/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15392/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40556/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2021-09-29 16:03:23.000000000
Message: 
Patch Set 11: Verified+1

Override failing clang-tidy job - not related
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2021-09-29 16:13:24.000000000
Message: 
Removed Verified-1 by Build Bot <build@couchbase.com>

----------------------------------------------------------------------------------------------------------------------
Author: Jim Walker
Date: 2021-10-04 12:24:01.000000000
Message: 
Patch Set 11: Code-Review+2
----------------------------------------------------------------------------------------------------------------------
